# CounselAI

./: .coverage  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  coverage.xml  docker-compose.local.yml  docker-compose.prod.yml  package-lock.json  package.json  pyproject.toml  pytest.ini  tsconfig.json
.github/workflows/: ci.yml
apps/ui-desktop/: Dockerfile  index.html  nginx.conf  package.json  tauri.conf.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/ui-desktop/src/: App.tsx  index.css  styles.css
apps/ui-desktop/src/components/: ChatBox.tsx  FileUploader.tsx  MessageBubble.tsx  ModelManager.tsx  ModelVerifier.tsx
apps/ui-desktop/tauri/: Cargo.toml
apps/ui-desktop/tauri/src/: main.rs
audit/: ledger.jsonl
counsel_ai/: audit.py  cli.py  dialogue.py  docgen.py  models.py  reasoning.py
counsel_ai/corpus/: README.md
counsel_ai/templates/: parere.md.j2
desktop/: index.html  package.json  tsconfig.json
desktop/src/: App.tsx
docs/: PRD.md
docs/architecture/: counselai_mcp_architecture.md
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: counsel-ai.json
output/: parere_HT-2025-0001.docx
scripts/: Cargo.toml  deploy.sh  key-manager.sh  model-manager.rs
services/mcp-gateway/: .env.example  Cargo.toml  Dockerfile
services/mcp-gateway/models/: publickey.asc  trusted_models.json  trusted_models.json.asc
services/mcp-gateway/src/: auth.rs  config.rs  gpt_client.rs  health.rs  main.rs  model.rs  openapi.rs  routes.rs
src/: index.ts
src/components/: ModelVerifier.tsx
src/counsel_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/crypto/: vault.ts
src/mcp/registry/: registryGuard.ts
src/mcp/tools/: vaultTools.ts
tauri/: Cargo.toml
tauri/src/: model_registry.rs
tests/: test_audit.py  test_dialogue.py  test_models.py  test_reasoning.py
