[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "counsel-ai"
version = "0.1.0"
description = "Counsel AI - Italian legal assistant (MVP)"
authors = [{ name = "IPPAN Labs" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
keywords = ["legal", "ai", "italy", "privacy"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: Other/Proprietary License",
  "Operating System :: POSIX :: Linux",
]
dependencies = [
  "pydantic>=2.7",
  "rich>=13.7",
  "typer>=0.12",
  "jinja2>=3.1",
  "python-docx>=1.1",
  "reportlab>=4.2",
  "sqlite-utils>=3.36",
  "qdrant-client>=1.9",
  "cryptography>=43.0",
]

[project.optional-dependencies]
test = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "pytest-mock>=3.10",
  "pytest-asyncio>=0.21",
]
dev = [
  "black>=23.0",
  "isort>=5.12",
  "flake8>=6.0",
  "mypy>=1.0",
  "pre-commit>=3.0",
]

[project.scripts]
counsel-ai = "counsel_ai.cli:app"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["counsel_ai"]
known_third_party = ["pydantic", "rich", "typer", "jinja2"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "reportlab.*",
    "docx.*",
    "qdrant_client.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--cov=counsel_ai",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]